feat: Implement Kubernetes client operations and configuration for managing OAuth2 clients